--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'io.github.pilgr:paperdb:2.7.2'
     implementation 'com.google.android.material:material:1.2.0-alpha02'
+    implementation("com.squareup.okhttp3:okhttp:4.10.0")
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
