--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,16 +19,20 @@
         tools:targetApi="31">
         <activity
             android:name=".SavedMessages"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="sensorPortrait"/>
         <activity
             android:name=".ReadingMode"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="sensorPortrait"/>
         <activity
             android:name=".HomePage"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="sensorPortrait"/>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="sensorPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
