--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation("com.squareup.okhttp3:okhttp:4.10.0")
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.android.gms:play-services-ads:22.2.0'
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
