--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AskGPTAi"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/googleAdsAppId" />
         <activity
             android:name=".SavedMessages"
             android:exported="false"
@@ -40,5 +43,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
